--- a/employees/webapp/view/MainView.view.xml
+++ b/employees/webapp/view/MainView.view.xml
@@ -3,7 +3,7 @@
     xmlns:mvc="sap.ui.core.mvc"
     displayBlock="true"
     xmlns="sap.m"
-    xmlns:core="sa.ui.core"
+    xmlns:core="sap.ui.core"
     xmlns:layout="sap.ui.layout"
 >
     <Shell id="shell">
@@ -11,7 +11,18 @@
             <pages>
                 <Page id="page" title="{i18n>title}">
                     <content>
-                     <Text id="_IDGenText1" text="Hello Employees"></Text>
+                     <HBox id="HBOX1">
+                        <Label id="labelEmployee" labelFor="inputEmployee" text="{i18n>labelEmployee}" class="sapUiSmallMargin" /> 
+                        <Input id="inputEmployee" maxLength="10" width="200px" class="sapUiSmallMarginEnd" liveChange="onValidate"/>
+                        <Label id="labelCountry" labelFor="slCountry" text="{i18n>labelCountry}" class="sapUiSmallMargin" visible="false"/> 
+                        <Select id="slCountry" forceSelection="false" visible="false">
+                        <core:Item id="_IDGenItem1" key="US"  text="{i18n>CountryUS}"/>
+                        <core:Item id="_IDGenItem2" key="UK"  text="{i18n>CountryUK}"/>
+                         <core:Item id="_IDGenItem3" key="ES"  text="{i18n>CountryES}"/>
+                        </Select>
+
+
+                     </HBox>
                     </content>
                 </Page>
             </pages>
